--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subash K - Portfolio</title>
-    
+    <link rel="icon" type="image/png" href="favicon.png">
 <style>
 * {
     margin: 0;
@@ -17,8 +17,10 @@ body {
     line-height: 1.6;
     /* color: #1f2937;
     background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%); */
-    color: #f1f5f9;
-    background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%);
+    /* color: #f1f5f9;
+    background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%); */
+    color: #E0E0E0;
+    background: #1A202C;
 }
 
 .container {
@@ -101,9 +103,12 @@ body {
     padding: 4rem 0;
 }
 
-.section:nth-child(even) {
-    /* background: rgba(255, 255, 255, 0.5); */
+/* .section:nth-child(even) {
+    background: rgba(255, 255, 255, 0.5);
     background: transparent;
+} */
+#experience, #projects {
+    background-color: #2B2D42;
 }
 
 .section-title {
@@ -111,10 +116,11 @@ body {
     font-weight: 700;
     text-align: center;
     margin-bottom: 3rem;
-    background: linear-gradient(135deg, #3b82f6 0%, #8b5cf6 100%);
+    /* background: linear-gradient(135deg, #3b82f6 0%, #8b5cf6 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    background-clip: text;
+    background-clip: text; */
+    color: #66B2B2;
 }
 
 /* About Section */
@@ -128,7 +134,8 @@ body {
     font-size: 1.1rem;
     margin-bottom: 1.5rem;
     /* color: #4b5563; */
-    color: #cbd5e1;
+    /* color: #cbd5e1; */
+    color: #E0E0E0;
 }
 
 /* Resume Grid */
@@ -142,7 +149,8 @@ body {
 
 .resume-category h3 {
     font-size: 1.5rem;
-    color: #3b82f6;
+    /* color: #3b82f6; */
+    color: #66B2B2;
     margin-bottom: 1.5rem;
     text-align: center;
 }
@@ -155,14 +163,16 @@ body {
     /* box-shadow: 0 5px 20px rgba(0,0,0,0.1); */
     box-shadow: 0 5px 20px rgba(0,0,0,0.3);
     margin-bottom: 1.5rem;
-    border-left: 4px solid #3b82f6;
+    /* border-left: 4px solid #3b82f6; */
+    border-left: 4px solid #66B2B2;
 }
 
 .resume-item h4 {
     font-size: 1.2rem;
     font-weight: 600;
     /* color: #1f2937; */
-    color: #f1f5f9;
+    /* color: #f1f5f9; */
+    color: #66B2B2;
     margin-bottom: 0.5rem;
 }
 
@@ -176,7 +186,8 @@ body {
 
 .resume-item p:last-child {
     /* color: #4b5563; */
-    color: #cbd5e1;
+    /* color: #cbd5e1; */
+    color: #E0E0E0;
     line-height: 1.6;
 }
 
@@ -194,8 +205,10 @@ body {
 }
 
 .skill-tag {
-    background: linear-gradient(135deg, #3b82f6 0%, #8b5cf6 100%);
-    color: white;
+    /* background: linear-gradient(135deg, #3b82f6 0%, #8b5cf6 100%);
+    color: white; */
+    background: #66B2B2;
+    color: #1A202C;
     padding: 0.8rem 1.5rem;
     border-radius: 2rem;
     font-size: 0.9rem;
@@ -222,7 +235,7 @@ body {
     padding: 2.5rem;
     border-radius: 1rem;
     /* box-shadow: 0 10px 30px rgba(0,0,0,0.1); */
-    box-shadow: 0 10px 30px rgba(0,0,0,0,5);
+    box-shadow: 0 10px 30px rgba(0,0,0,0,0.5);
     transition: transform 0.3s ease;
 }
 
@@ -236,11 +249,13 @@ body {
     /* margin-bottom: 0.5rem;
     color: #1f2937; */
     margin-bottom: 0.5rem;
-    color: #f1f5f9;
+    /* color: #f1f5f9; */
+    color: #66B2B2;
 }
 
 .project-meta {
-    color: #3b82f6;
+    /* color: #3b82f6; */
+    color: #66B2B2;
     font-size: 0.9rem;
     font-weight: 500;
     margin-bottom: 1rem;
@@ -248,7 +263,8 @@ body {
 
 .project-description {
     /* color: #4b5563; */
-    color: #cbd5e1;
+    /* color: #cbd5e1; */
+    color: #E0E0E0;
     line-height: 1.6;
 }
 
@@ -271,7 +287,8 @@ body {
 .contact-content p {
     font-size: 1.1rem;
     /* color: #4b5563; */
-    color: #cbd5e1;
+    /* color: #cbd5e1; */
+    color: #E0E0E0;
     margin-bottom: 2rem;
 }
 
@@ -284,23 +301,28 @@ body {
 
 .footer-links a {
     /* color: #3b82f6; */
-    background: #0f172a;
+    /* background: #0f172a; */
+    background: #E0E0E0;
     text-decoration: none;
     font-weight: 500;
     padding: 0.8rem 1.5rem;
-    border: 2px solid #3b82f6;
+    /* border: 2px solid #3b82f6; */
+    border: 2px solid #66B2B2;
     border-radius: 0.5rem;
     transition: all 0.3s ease;
 }
 
 .footer-links a:hover {
-    background: #3b82f6;
-    color: white;
+    /* background: #3b82f6;
+    color: white; */
+    background: #66B2B2;
+    color: #1A202C;
 }
 
 /* Footer */
 .footer {
-    background: #1f2937;
+    /* background: #1f2937; */
+    background: #0f172a;
     color: white;
     text-align: center;
     padding: 2rem 0;
@@ -357,7 +379,7 @@ body {
         <div class="container">
             <h1 class="hero-name">Subash K</h1>
             <!-- <p class="hero-subtitle">Software Engineer with 2+ years of experience in building scalable web applications using Java, Spring Boot, Angular, and Node.js.</p> -->
-            <p class="hero-subtitle">A Software Engineer with over two years of experience building scalable web applications using Java, Spring Boot, Angular, and Node.js.</p>
+            <p class="hero-subtitle">A Software Engineer with over two years of experience building scalable web applications using Java, Spring Boot, Angular, and NoSQL.</p>
             <p class="hero-description">Passionate about creating innovative solutions and leveraging technology to solve real-world problems.</p>
         </div>
     </section>
@@ -368,8 +390,8 @@ body {
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <!-- <p>Full Stack Developer with over 2 years of experience in building scalable and maintainable web applications using Java, Spring Boot, Angular, and Node.js within microservices-based architectures. </p> -->
-                <p>I am a Full Stack Developer with over 2 years of experience building scalable and maintainable web applications. My expertise lies in using Java, Spring Boot, Angular, and Node.js within microservices-based architectures.</p>
-                <p>I am passionate about creating innovative solutions and leveraging technology to solve real-world problems. I am a strong believer in continuous learning and staying up-to-date with the latest technologies.</p>
+                <p>I am a Full Stack Developer with over 2 years of experience building scalable and maintainable web applications. My expertise lies in using Java, Spring Boot, Angular, and NoSQL within microservices based architectures.</p>
+                <p>I am passionate about creating innovative solutions and leveraging technology to solve real world problems. I am a strong believer in continuous learning and staying up-to-date with the latest technologies.</p>
             </div>
         </div>
     </section>
@@ -400,13 +422,13 @@ body {
                         <p>CGPA: 8.1/10</p>
                     </div>
                 </div>
-                <div class="resume-category">
+                <!-- <div class="resume-category">
                     <h3>Certifications</h3>
                     <div class="resume-item">
                         <h4>(Add Certifications Here)</h4>
                         <p class="resume-meta">(Add Certification Details Here)</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
